--- a/README
+++ b/README
@@ -1,11 +1,14 @@
-#Clone the project 
-newgrp docker
+# Prerequisite
+Install docker + docker compose plugin
+Run commands from docker group (run newgrp docker)
+
+# Clone the project 
 git clone --recurse-submodules git@gitlab-bbs.rmm.scom:g565427/e2e_tests.git
 cd e2e_tests
 
 # Clean permissions env
-sed -i "s/uid=1000/uid=$(id -g)/" Dockerfile
-sed -i "s/gid=1000/gid=$(id -g)/" Dockerfile
+sed -i "s|uid=.*$|uid=$(id -g)|" Dockerfile
+sed -i "s|gid=.*$|gid=$(id -g)|" Dockerfile
 chmod g+rw -R docker-local-files/volume/
 
 # Create networks
@@ -38,5 +41,6 @@ docker compose up -d
 
 
 # Run test
-docker attach <container-id>
-pytest 
+  docker attach <container-id>
+  # Adapt tests if necessary
+  pytest --out=<out> --repeat-scope="session" --count=<count>
